# Confounds

./: .gitignore  Confounds.ipynb  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt  sandbox.ipynb
lib/: func_01_05.py  script_01_00.py  script_01_01.py  script_01_02.py  script_01_03-4.py  script_01_03_to_4.py  script_01_05.py  script_01_06.py  script_01_06_to_8.py  script_01_09.py  script_01_09_to_12.py  script_01_12_to_15.py  script_01_16.py
pyconfounds/: Confounds.ipynb  confounds.py  construct_and_deconfound_ct.py  generate_crossed_confounds_cluster.py  generate_initial_variables.py  generate_nonlin_confounds.py  generate_raw_confounds.py  generate_smoothed_confounds.py  get_p_vals_and_ve.py  get_p_vals_and_ve_cluster.py  sandbox.ipynb  script_01_00.py  script_01_01.py  script_01_02.py  script_01_03_to_4.py  script_01_05.py  script_01_06_to_8.py  script_01_09_to_12.py  script_01_12_to_15.py  script_01_16.py  threshold_ve.py
pyconfounds/dasktools/: connect_to_cluster.py
pyconfounds/duplicate/: duplicate_categorical.py  duplicate_demedian_norm_by_site.py
pyconfounds/logio/: loading.py  my_log.py
pyconfounds/memmap/: MemoryMappedDF.py  addBlockToMmap.py  read_memmap_df.py
pyconfounds/nantools/: all_non_nan_inds.py  create_nan_patterns.py  format_constant_cols.py  nan_pattern.py
pyconfounds/nets/: nets_deconfound_multiple.py  nets_deconfound_single.py  nets_demean.py  nets_inverse_normal.py  nets_load_match.py  nets_normalise.py  nets_pearson.py  nets_percentile.py  nets_rank_transform.py  (+3 more)
src/: duplicate.py  memmap.py  preproc.py
(+30 files in other folders)
